--- a/art.html
+++ b/art.html
@@ -20,7 +20,7 @@
                         <li><a href="https://Apostrophe4.github.io/art.html" onClick="window.open('https://Apostrophe4.github.io/art.html', '_self'); metrixGoal(); return false;" style="color: #ff0097">Статьи</a></li>
                         <li><a href="https://Apostrophe4.github.io/do.html" onClick="window.open('https://Apostrophe4.github.io/do.html', '_self'); metrixGoal(); return false;">Мнение экспертов<span style='display:none'>b23a234af9</span></a></li>
                         <li><a href="https://Apostrophe4.github.io/use.html" onClick="window.open('https://Apostrophe4.github.io/use.html', '_self'); metrixGoal(); return false;">Как применять<span style='display:none'>2e871faf8b</span></a></li>
-                        <li><a href="https://Apostrophe4.github.io/index.html" onClick="window.open('https://Apostrophe4.github.io/index.html', '_self'); metrixGoal(); return false;">Отзывы</a></li>
+                        <li><a href="/index.html" onClick="window.open('/index.html', '_self'); metrixGoal(); return false;">Отзывы</a></li>
                         <li><a href="https://Apostrophe4.github.io/order.html" onClick="window.open('https://Apostrophe4.github.io/order.html', '_self'); metrixGoal(); return false;">Заказать Титан Гель<span style='display:none'>66d3906a5c</span></a></li>                    </ul>
                 </nav>
             </div>
