--- a/art.html
+++ b/art.html
@@ -17,11 +17,11 @@
                 <a href="https://cafechorsu.ru/maintext/" class="titan" style="padding-top: 30px;">ТИТАН ГЕЛЬ <span style="text-transform: lowercase;">официальный сайт</span></a>
                 <nav class="navigation">
                     <ul style="padding-top: 30px; padding-left: 40px;">
-                        <li><a href="https://Apostrophe4.github.io/art.html" onClick="window.open('https://Apostrophe4.github.io/art.html', '_self'); metrixGoal(); return false;" style="color: #ff0097">Статьи</a></li>
-                        <li><a href="https://Apostrophe4.github.io/do.html" onClick="window.open('https://Apostrophe4.github.io/do.html', '_self'); metrixGoal(); return false;">Мнение экспертов<span style='display:none'>b23a234af9</span></a></li>
-                        <li><a href="https://Apostrophe4.github.io/use.html" onClick="window.open('https://Apostrophe4.github.io/use.html', '_self'); metrixGoal(); return false;">Как применять<span style='display:none'>2e871faf8b</span></a></li>
+                        <li><a href="/art.html" onClick="window.open('/art.html', '_self'); metrixGoal(); return false;" style="color: #ff0097">Статьи</a></li>
+                        <li><a href="/do.html" onClick="window.open('/do.html', '_self'); metrixGoal(); return false;">Мнение экспертов<span style='display:none'>b23a234af9</span></a></li>
+                        <li><a href="/use.html" onClick="window.open('/use.html', '_self'); metrixGoal(); return false;">Как применять<span style='display:none'>2e871faf8b</span></a></li>
                         <li><a href="/index.html" onClick="window.open('/index.html', '_self'); metrixGoal(); return false;">Отзывы</a></li>
-                        <li><a href="https://Apostrophe4.github.io/order.html" onClick="window.open('https://Apostrophe4.github.io/order.html', '_self'); metrixGoal(); return false;">Заказать Титан Гель<span style='display:none'>66d3906a5c</span></a></li>                    </ul>
+                        <li><a href="/order.html" onClick="window.open('/order.html', '_self'); metrixGoal(); return false;">Заказать Титан Гель<span style='display:none'>66d3906a5c</span></a></li>                    </ul>
                 </nav>
             </div>
 
@@ -37,11 +37,11 @@
 		
             <section class="article">
 					<ul style="padding-bottom: 15px; margin-top: 20px;">
-                        <li><a href="https://Apostrophe4.github.io/art.html" onClick="window.open('https://Apostrophe4.github.io/art.html', '_self'); metrixGoal(); return false;" style="color: #ff0097">Статьи</a></li>
-                        <li><a href="https://Apostrophe4.github.io/do.html" onClick="window.open('https://Apostrophe4.github.io/do.html', '_self'); metrixGoal(); return false;">Мнение экспертов<span style='display:none'>b23a234af9</span></a></li>
-                        <li><a href="https://Apostrophe4.github.io/use.html" onClick="window.open('https://Apostrophe4.github.io/use.html', '_self'); metrixGoal(); return false;">Как применять<span style='display:none'>2e871faf8b</span></a></li>
-                        <li><a href="https://Apostrophe4.github.io/index.html" onClick="window.open('https://Apostrophe4.github.io/index.html', '_self'); metrixGoal(); return false;">Отзывы</a></li>
-                        <li><a href="https://Apostrophe4.github.io/order.html" onClick="window.open('https://Apostrophe4.github.io/order.html', '_self'); metrixGoal(); return false;">Заказать Титан Гель<span style='display:none'>66d3906a5c</span></a></li>                    </ul>
+                        <li><a href="/art.html" onClick="window.open('/art.html', '_self'); metrixGoal(); return false;" style="color: #ff0097">Статьи</a></li>
+                        <li><a href="/do.html" onClick="window.open('/do.html', '_self'); metrixGoal(); return false;">Мнение экспертов<span style='display:none'>b23a234af9</span></a></li>
+                        <li><a href="/use.html" onClick="window.open('/use.html', '_self'); metrixGoal(); return false;">Как применять<span style='display:none'>2e871faf8b</span></a></li>
+                        <li><a href="/index.html" onClick="window.open('/index.html', '_self'); metrixGoal(); return false;">Отзывы</a></li>
+                        <li><a href="/order.html" onClick="window.open('/order.html', '_self'); metrixGoal(); return false;">Заказать Титан Гель<span style='display:none'>66d3906a5c</span></a></li>                    </ul>
                     </ul>
                 <div class="article-info clearfix">
                     <time class="left">21 августа 2021 17:35</time>
