--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         </div>
                         <div class="comment-text" style="padding-left: 30px;">
                             <div class="comment-meta">Дамир Мухаметдьянов / 23 августа 2021 17:03</div>
-                            Купил гель 3 месяца назад. Результат +4 см. Очень доволен. Доставили быстро!
+                            Купил гель 3 месяца назад. Результат +4 см. Очень доволен. Что важно лично для меня так это то что член вырос не только в длину ну и в ширену. Доставили быстро!
                         </div>
                     </div>
 					<div class="comment" style="display: flex;">
@@ -84,7 +84,7 @@
                             <img src="files/img/c-1.gif" alt="">
                         </div>
                         <div class="comment-text" style="padding-left: 30px;">
-                            <div class="comment-meta">Лариса Крыжевская / 28 августа 2021 11:47</div>
+                            <div class="comment-meta">Влад Крыжевский / 28 августа 2021 11:47</div>
 							Оно работает! Член вырос, жена довольна. После применения этого средства мой дружок подрос, стал более уверенным в себе и жена в восторге.
                         </div>
                     </div>
@@ -120,7 +120,7 @@
                             <img src="files/img/c-1.gif" alt="">
                         </div>
                         <div class="comment-text" style="padding-left: 30px;">
-                            <div class="comment-meta">Анатолий Кравц / 31 августа 2021 17:00</div>
+                            <div class="comment-meta">Андрей Иванов / 31 августа 2021 17:00</div>
                             Да он либо палёный по дешёвки не у официального поставщика в России брал, либо не по инструкции гель применял
                         </div>
                     </div>
